<resources>
    <string name="app_name">Bargy</string>
    <string name="home_list_error">Unable to Load Languages</string>
    <string name="glossary_error">Unable to Load Glossary</string>
    <string name="culture_error">Unable to Load Culture</string>
    <string name="searchEngYola">Search English to Yola</string>
    <string name="attribution">Content provided by Wikipedia under a CC BY-SA 4.0 license.</string>
    <string name="yola_word_of_the_day">Yola Word of the Day</string>
    <string name="search">Search</string>
    <string name="search_button">Search button</string>
    <string name="summary">Summary</string>
    <string name="detail">Detail</string>
    <string name="glossary_section_image">Glossary Section Image</string>
    <string name="glossary">Glossary</string>
    <string name="history_section_image">History Section Image</string>
    <string name="history">History</string>
    <string name="culture_section_image">Culture Section Image</string>
    <string name="culture">Culture</string>
    <string name="yola_section_image">Yola Section Image</string>
    <string name="play_icon">Play icon</string>
    <string name="history_error">Unable to Load History</string>
    <string name="yola_image_one">Yola Image One</string>
    <string name="yola_image_two">Yola Image Two</string>
</resources>
