<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="vertical">

        <TextView
            android:id="@+id/tv_summary_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/summary"
            android:textSize="30sp"
            android:padding="8dp"
            android:fontFamily="@font/nunito_bold"/>

        <TextView
            android:id="@+id/tv_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_summary_heading"
            tools:text="Yola is a thingy that do the wingy tingy ah hoo ahh hooo."
            android:textSize="18sp"
            android:padding="8dp"/>

        <View
            android:id="@+id/v_hdivider1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"
            android:layout_below="@+id/tv_summary"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>

        <TextView
            android:layout_below="@+id/v_hdivider1"
            android:id="@+id/tv_detail_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail"
            android:textSize="30sp"
            android:padding="8dp"
            android:fontFamily="@font/nunito_bold"/>

        <TextView
            android:id="@+id/tv_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_detail_heading"
            tools:text="Yola is a thingy that do the wingy tingy ah hoo ahh hooo."
            android:textSize="18sp"
            android:padding="8dp"/>

        <View
            android:id="@+id/v_hdivider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"
            android:layout_below="@+id/tv_detail"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>

        <android.support.v7.widget.CardView
            android:id="@+id/cv_image_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:layout_below="@+id/v_hdivider2"
            app:cardBackgroundColor="@color/cardview_light_background"
            app:cardCornerRadius="12dp"
            app:cardElevation="3dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="340dp"
                            android:id="@+id/iv_image_one"
                            android:layout_alignParentTop="true"
                            android:scaleType="fitXY"
                            android:src="@drawable/yola"
                            tools:contentDescription="Language Image"
                            android:contentDescription="@string/yola_image_one" />

                        <TextView
                            android:padding="12dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/tv_image_one_description"
                            android:textSize="20sp"
                            tools:text="Traditional thatched cottage near Bannow Bay in Bargy"
                            android:layout_below="@+id/iv_image_one"/>

                        <TextView
                            android:padding="12dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/tv_image_one_attribution"
                            android:textSize="16sp"
                            tools:text="Credit: Pam Brophy"
                            android:textStyle="italic"
                            android:layout_below="@+id/tv_image_one_description" />
                </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cv_image_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:layout_below="@+id/cv_image_one"
            app:cardBackgroundColor="@color/cardview_light_background"
            app:cardCornerRadius="12dp"
            app:cardElevation="3dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="340dp"
                            android:id="@+id/iv_image_two"
                            android:layout_alignParentTop="true"
                            android:scaleType="fitXY"
                            android:src="@drawable/yola"
                            tools:contentDescription="Language Image"
                            android:contentDescription="@string/yola_image_two" />

                        <TextView
                            android:padding="12dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/tv_image_two_description"
                            android:textSize="20sp"
                            tools:text="Traditional thatched cottage near Bannow Bay in Bargy"
                            android:layout_below="@+id/iv_image_two"/>

                        <TextView
                            android:padding="12dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/tv_image_two_attribution"
                            android:textSize="16sp"
                            tools:text="Credit: Pam Brophy"
                            android:textStyle="italic"
                            android:layout_below="@+id/tv_image_two_description" />
                </RelativeLayout>

        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/tv_attribution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cv_image_two"
            android:padding="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/attribution"
            android:layout_marginStart="8dp" />

</RelativeLayout>
